@@ -10,7 +10,6 @@ Build.bat
 LICENSE
 Makefile
 Makefile.old
-MANIFEST
 MANIFEST.bak
 META.json
 META.yml
