@@ -1,0 +1,4 @@
+language: perl
+branches:
+  only:
+    - master
