@@ -2,9 +2,9 @@ name = Data-CloudWeights
 
 [Prereqs]
 perl              = 5.01
-namespace::autoclean = 0.19
-Moo               = 1.003000
-Type::Tiny        = 0.012
+namespace::autoclean = 0.22
+Moo               = 2.000001
+Type::Tiny        = 1.000004
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
@@ -32,18 +32,33 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/PJFL
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Data-CloudWeights
 bugtracker.mailto = bug-Data-CloudWeights@rt.cpan.org
-;repository.url   = git://github.com/pjfl/Data-CloudWeights.git
-;repository.web   = http://github.com/pjfl/Data-CloudWeights
-;repository.type  = git
+repository.url    = git://github.com/pjfl/p5-data-cloudweights.git
+repository.web    = https://github.com/pjfl/p5-data-cloudweights
+repository.type   = git
+
+[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
+filename          = README.md
+location          = root
+type              = markdown
+
+[Run::BeforeBuild]
+run               = cp .build.PL Build.PL
+
+[CopyFilesFromBuild]
+copy              = Build.PL
+move              = cpanfile
+
+[GatherDir]
+exclude_filename  = cpanfile
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
-[GatherDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
+[CPANFile]
 [License]
 [MetaJSON]
 [MetaYAML]
